Fix -falign-functions used in function attribute (PR c/84100).

gcc/ChangeLog:

2018-02-06  Martin Liska  <mliska@suse.cz>

	PR c/84100
	* flags.h (struct target_flag_state): Remove
	x_align_functions_log.
	(align_functions_log): Likewise.
	* toplev.c (init_alignments): Do not initialize it.
	* varasm.c (assemble_start_function): Calculate log2
	of align_functions.

gcc/testsuite/ChangeLog:

2018-02-06  Martin Liska  <mliska@suse.cz>

	PR c/84100
	* gcc.target/i386/pr84100.c: New test.